--- a/src/slides/Slide1/Slide1.scss
+++ b/src/slides/Slide1/Slide1.scss
@@ -1,15 +1,45 @@
-.broadcast-img-container {
-  position: absolute;
-  top: -200px;
-  right: -200px;
-  z-index: -1;
-  opacity: 0.05;
+.slide2-container {
+  display: flex;
+  height: 100%;
+  padding: 0 30px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-.react-animation-container {
-  position: absolute;
-  bottom: -200px;
-  left: -200px;
-  z-index: -1;
-  opacity: 0.05;
+.interactive-example {
+  flex: 0.6;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.code-pane {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .code-container {
+
+    .code-pane-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
+.code-pane-title {
+  font-size: 18px;
+  color: #f1f1f1;
+  margin-top: 15px;
+  text-align: center;
+}
+
+pre {
+  overflow-y: scroll;
+  max-height: 80vh;
 }
