--- a/src/components/Playlist/Playlist.scss
+++ b/src/components/Playlist/Playlist.scss
@@ -1,7 +1,7 @@
 .playlist {
   width: 350px;
-  height: 450px;
-  padding: 20px 10px;
+  height: 600px;
+  padding: 20px 10px 40px 10px;
   background-color: #1a1a1a;
   border-radius: 10px;
 
@@ -10,4 +10,73 @@
   align-items: flex-start;
 
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  position: relative;
+
+  overflow: hidden;
+
+  .song-block {
+    display: block;
+    overflow: auto;
+    width: 100%;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    .song-list {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .no-songs-found {
+      min-height: 400px;
+      width: 100%;
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      p {
+        font-size: 14px;
+        font-weight: 400;
+        color: #c0c0c0;
+        margin: 0;
+        padding: 0;
+      }
+    }
+  }
+
+  .get-genre-calls {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    p {
+      font-size: 14px;
+      font-weight: 400;
+      color: #c0c0c0;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+
+      span {
+        background: #fe0000;
+        color: white;
+        padding: 0 5px;
+        margin: 0 3px;
+        border-radius: 10px;
+      }
+    }
+  }
 }
